WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282185
Crash under -[WKModernDownloadProgress initWithDownloadTask:]
https://bugs.webkit.org/show_bug.cgi?id=282185
Summary
Crash under -[WKModernDownloadProgress initWithDownloadTask:]
Per Arne Vollan
Reported
2024-10-28 10:44:23 PDT
Crash under -[WKModernDownloadProgress initWithDownloadTask:]
Attachments
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2024-10-28 10:44:25 PDT
<
rdar://problem/138686924
>
Per Arne Vollan
Comment 2
2024-10-28 10:47:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35801
EWS
Comment 3
2024-10-28 20:26:04 PDT
Committed
285813@main
(9bd58ff623c2): <
https://commits.webkit.org/285813@main
> Reviewed commits have been landed. Closing PR #35801 and removing active labels.
EWS
Comment 4
2024-10-29 11:35:59 PDT
Committed
283286.377@safari-7620-branch
(c60416c8b8c8): <
https://commits.webkit.org/283286.377@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2144 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug