Crash under -[WKModernDownloadProgress initWithDownloadTask:] https://bugs.webkit.org/show_bug.cgi?id=282185 rdar://138686924

Reviewed by Chris Dumez.

Check that URLs passed to -[WKModernDownloadProgress initWithDownloadTask:] are not null, since that is
a requirement.

* Source/WebKit/NetworkProcess/Downloads/cocoa/DownloadCocoa.mm:
(WebKit::Download::publishProgress):

Canonical link: https://commits.webkit.org/285813@main